src/components/shared/StickyHeader/index.module.scss
@import "../../../styles/variables";

.header {
    position: fixed;
    top: -4.25vw;
    z-index: 9999;
    width: 100vw;

    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 4.25vw;
    background: $black;

    @media (max-width: $screen2Xl) {
        height: 68px;
        top: -68px;
    }

    @media (max-width: $screenSm) {
        top: -54px;
        height: 54px;
    }
}

.navbar {
    display: flex;
    justify-content: space-between;
    align-items: center;

    @media (max-width: $screenSm) {
        height: 34px;
    }
}

.logo {
    height: 1.75vw;
    cursor: pointer;

    @media (max-width: $screen2Xl) {
        height: 28px;
    }

    @media (max-width: $screenMd) {
        height: 23px;
    }

    @media (max-width: $screenSm) {
        height: 17px;
    }
}

.menu-container {
    display: flex;
    align-items: center;
}

.menu {
    display: flex;
    align-items: center;

    @media (max-width: $screenLg) {
        display: none;
    }
}

.menu-button {
    height: 2vw;
    font-size: 0.625vw;
    margin-right: 3.125vw;

    @media (max-width: $screen2Xl) {
        height: 32px;
        font-size: 10px;
        margin-right: 50px;
    }

    @media (max-width: $screenMd) {
        margin-right: 30px;
    }

    @media (max-width: $screenSm) {
        height: 26px;
        margin-right: 14px;
        padding-top: 0;
        padding-bottom: 0;

        & img {
            display: none;
        }
    }
}

.menu-link {
    color: white;
    font-family: $inter-400;
    font-size: 1.0625vw;
    transition: color 0.15s ease;
    cursor: pointer;

    &:not(:last-child) {
        margin-right: 2vw;
    }

    &:hover {
        color: $yellow;
    }

    @media (max-width: $screen2Xl) {
        font-size: 17px;

        &:not(:last-child) {
            margin-right: 32px;
        }
    }
}

.hamburger {
    z-index: 10;
    display: none;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    width: 1em;
    height: 1em;
    padding: 0.2em 0.145em;
    font-size: 24px;
    cursor: pointer;

    span {
        width: 100%;
        height: 0.083em;
        background: $white;
        border-radius: 0.0415em;
        transition: 0.2s ease;
        transform-origin: 100% 50%;
    }

    @media (max-width: $screenLg) {
        display: flex;
    }
}

.hamburger-close {
    span:nth-child(1) {
        transform: rotate(-45deg);
    }

    span:nth-child(2) {
        transform: scaleY(0);
    }

    span:nth-child(3) {
        transform: rotate(45deg);
    }
}

.mobile-menu {
    position: fixed;
    top: 0;
    left: 0;
    z-index: 6;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    width: 100vw;
    min-height: 100vh;
    background-color: $black;
    transition: transform 0.4s ease;
    transform: translate3d(100%, 0, 0);
}

.mobile-menu-opened {
    transform: translate3d(0, 0, 0);
}

.mobile-menu-link {
    color: white;
    font-family: $inter-400;
    font-size: 28.4px; //16px
    text-align: center;

    @media (max-width: $screenSm) {
        font-size: 4.44vw;
    }

    @media (max-width: $screen2Xs) {
        font-size: 16px;
    }

    &:not(:last-child) {
        margin-bottom: 3.1875em;
    }
}

